layout all sections and divs

--- a/index.html
+++ b/index.html
@@ -16,15 +16,55 @@
 </head>
 <body>
 
-  Features
-  Team
-  Sign In
+  <Header class="Navbar">
+      <img src="./images/logo.svg" alt="logo">
+      <ul>
+        <li>Features</li>
+        <li>Team</li>
+        <li>Sign In</li>
+      </ul>
+  </Header>
+  
+  <section class="row-1">
+    <div class="row-1-text">
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p>Fylo stores your most important files in one secure location. 
+        Access them wherever you need, share and collaborate with friends, 
+        family, and co-workers.</p>
+    </div>
 
-  All your files in one secure location, accessible anywhere.
+    <div  class="row-1-image">
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+    </div>
+  </section>
+
+  <section class="row-2">
+    <div class="row-2-text">
+
+
+      <div class="card">
+
+      </div>
+    </div>
+
+    <div class="row-2-image">
+
+    </div>
+  </section>
+
+  <section class="subscription-section">
+
+  </section>
+
+  <footer>
+
+  </footer>
+  
+ 
+
+  
+
+  
 
   Get Started
 
@@ -66,7 +106,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.beaulieudev.com">Justin Beaulieu</a>.
     </p>
   </footer>
 </body>
