--- a/index.html
+++ b/index.html
@@ -1,113 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./index.css">
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./index.css">
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
+  </head>
 
-  <Header class="Navbar">
+  <body>
+
+    <Header class="Navbar">
       <img src="./images/logo.svg" alt="logo">
       <ul>
         <li>Features</li>
         <li>Team</li>
         <li>Sign In</li>
       </ul>
-  </Header>
-  
-  <section class="row-1">
-    <div class="row-1-text">
-      <h1>All your files in one secure location, accessible anywhere.</h1>
-      <p>Fylo stores your most important files in one secure location. 
-        Access them wherever you need, share and collaborate with friends, 
-        family, and co-workers.</p>
-    </div>
+    </Header>
 
-    <div  class="row-1-image">
-
-    </div>
-  </section>
-
-  <section class="row-2">
-    <div class="row-2-text">
-
-
-      <div class="card">
-
+    <section class="row-1">
+      <div class="row-1-text">
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,
+          family, and co-workers.</p>
+        <form action="/">
+          <input type="text" placeholder="Enter your email...">
+          <button>Get Started</button>
+        </form>
       </div>
-    </div>
+      <div class="row-1-image">
+        <img src="./images/illustration-1.svg" alt="">
+      </div>
+    </section>
 
-    <div class="row-2-image">
+    <section class="row-2">
+      <div class="row-2-text">
+        <h1>Stay productive, wherever you are</h1>
+        <p>Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.</p>
+        <p>Securely share files and folders with friends, family and colleagues for
+          live collaboration. No email attachments required!</p>
+        <a href="#">See how Fylo works <img src="./images/icon-arrow.svg" alt=""> </a>
+        <div class="card">
+          <img src="./images/icon-quotes.svg" alt="">
+          <br />
+          <p>Fylo has improved our team productivity by an order of magnitude. Since
+            making the switch our team has become a well-oiled collaboration machine.</p>
+          <div class="author">
+            <img src="./images/avatar-testimonial.jpg" alt="">
+            <h4>Kyle Burton</h4>
+            <p> Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+      <div class="row-2-image">
+        <img src="./images/illustration-2.svg" alt="">
+      </div>
+    </section>
 
-    </div>
-  </section>
+    <section class="subscription-section">
+      <div class="ss-left">
+        <h2>Get early access today</h2>
+        <p> It only takes a minute to sign up and our free starter tier is extremely generous.
+          If you have any questions, our support team would be happy to help you.</p>
+      </div>
+      <div class="ss-right">
+        <form action="/">
+          <input type="text" placeholder="email@example.com">
+          <button>Get Started For Free</button>
+        </form>
+      </div>
+    </section>
 
-  <section class="subscription-section">
+    <section class="footer">
+      <div class="logo">
+        <img src="./images/logo.svg" alt="">
+      </div>
+      <div class="footer-columns">
+        <div class="left">
+          <ul>
+            <li><img src="./images/icon-phone.svg" alt=""> Phone: +1-543-123-4567</li>
+            <li><img src="./images/icon-email.svg" alt=""> example@fylo.com</li>
+          </ul>
+        </div>
+        <div class="middle-left">
+          <ul>
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </ul>
+        </div>
+        <div class="middle-right">
+          <ul>
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+        <div class="right">
+          <ul>
+            <li>F</li>
+            <li>T</li>
+            <li>I</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  </section>
-
-  <footer>
-
-  </footer>
-  
- 
-
-  
-
-  
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.beaulieudev.com">Justin Beaulieu</a>.
-    </p>
-  </footer>
-</body>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.beaulieudev.com">Justin Beaulieu</a>.
+      </p>
+    </footer>
+  </body>
 </html>
