styling main 2 sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="./images/illustration-1.svg" alt="">
       </div>
     </section>
-
+    <img src="./images/bg-curve-desktop.svg" alt="" class="bg-curve">
     <section class="row-2">
       <div class="row-2-text">
         <h1>Stay productive, wherever you are</h1>
