--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <section class="row-1">
       <div class="row-1-text">
-        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <h1 class="header">All your files in one secure <br/> location, accessible anywhere.</h1>
         <p>Fylo stores your most important files in one secure location.
-          Access them wherever you need, share and collaborate with friends,
-          family, and co-workers.</p>
+          Access<br/> them wherever you need, share and collaborate with friends,
+          family,<br/> and co-workers.</p>
         <form action="/">
           <input type="text" placeholder="Enter your email...">
           <button>Get Started</button>
@@ -40,7 +40,7 @@
     <img src="./images/bg-curve-desktop.svg" alt="" class="bg-curve">
     <section class="row-2">
       <div class="row-2-text">
-        <h1>Stay productive, wherever you are</h1>
+        <h1 class="header">Stay productive, wherever you are</h1>
         <p>Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.</p>
         <p>Securely share files and folders with friends, family and colleagues for
