styling the subscription section

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <section class="subscription-section">
       <div class="ss-left">
-        <h2>Get early access today</h2>
-        <p> It only takes a minute to sign up and our free starter tier is extremely generous.
-          If you have any questions, our support team would be happy to help you.</p>
+        <h2 class="header">Get early access today</h2>
+        <p> It only takes a minute to sign up and our free starter tier is <br/> extremely generous.
+          If you have any questions, our support team <br/> would be happy to help you.</p>
       </div>
       <div class="ss-right">
         <form action="/">
